discussion/kv_engine/173471/173471_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Create RangeScans using an I/O task

Add RangeScanCreateTask (AUXIO task) and supporting code so that
a RangeScan is created on the I/O task.

Change-Id: Ib8d4897b1c47ca7aadba8a43a470743ebeb5dd87

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-08 11:20:33.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-08 12:53:03.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45152/ : FAILURE

Failure of GoogleTest "PersistentAndEphemeral/DcpStreamSyncReplTest.BackfillMajorityPrepareDelete/persistent_couchstore":

<pre>
[ RUN      ] PersistentAndEphemeral/DcpStreamSyncReplTest.BackfillMajorityPrepareDelete/persistent_couchstore
unknown file: error: C++ exception with description "cb::io::rmrf: remove of file \\?\C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db\test.811301\nexus-secondary\magma.1\wal\wal.1 under ep_engine_ep_unit_tests.db/test.811301 failed: The data is invalid." thrown in TearDown().
[  FAILED  ] PersistentAndEphemeral/DcpStreamSyncReplTest.BackfillMajorityPrepareDelete/persistent_couchstore, where GetParam() = "persistent_couchstore" (36 ms)
PersistentAndEphemeral/DcpStreamSyncReplTest.BackfillMajorityPrepareDelete/persistent_couchstore
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45152/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37927/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan.h:138:24:
error: implicit instantiation of undefined template "std::atomic<RangeScan::State>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37927/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16560/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:108:39: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
    void dump(std::ostream& os = std::cerr) const;
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:138:24: error: implicit instantiation of undefined template "std::atomic<RangeScan::State>" [clang-diagnostic-error]
    std::atomic<State> state;
                       ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/atomic_base.h:152:12: note: template is declared here
    struct atomic;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16560/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:108:39:
error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16560/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19362/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19362/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15491/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17427/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6212/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18331/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18664/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26739/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6271/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
